Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -30,10 +30,12 @@
 
   <!-- メインコンテンツ -->
   <main class="site-main">
+
+    <!-- 上部セクション: 「ようこそ」+「名物グルメランキング」ボタン -->
     <section class="review-post container" style="text-align:center;">
       <h2 id="homeTitle" style="margin-bottom:30px;">ようこそ</h2>
       <!-- 1) 名物グルメランキングはこちら ボタン -->
-      <a href="ranking.html" class="btn-review" id="goToRankingButton"　style="display:inline-block; margin-bottom:30px;">
+      <a href="ranking.html" class="btn-review" id="goToRankingButton" style="display:inline-block; margin-bottom:30px;">
         名物グルメランキングはこちら
       </a>
     </section>
@@ -41,21 +43,33 @@
     <!-- 区切り線 -->
     <div class="section-divider"></div>
 
+    <!-- 中部セクション: 「レビュー投稿」ボタン -->
     <section class="go-post container" style="text-align:center; margin-top:30px;">
       <!-- 2) レビュー投稿はこちら ボタン (btn-review) -->
       <a href="post.html" class="btn-review" id="goToPostButton">
         レビュー投稿はこちら
       </a>
     </section>
+
+    <!-- 区切り線 -->
+    <div class="section-divider"></div>
+
+    <!-- 下部セクション: 「ログイン」「新規登録」ボタン -->
+    <section class="go-auth container" style="text-align:center; margin-top:30px;">
+      <a href="login.html" class="btn-review" id="goToLoginButton" style="margin-right:10px;">
+        ログインはこちら
+      </a>
+      <a href="signup.html" class="btn-review" id="goToSignupButton">
+        新規登録はこちら
+      </a>
+    </section>
+
   </main>
 
   <!-- フッター -->
   <footer class="site-footer">
     <div class="container">
-      <p>
-        <a href="#" id="contactLink">お問い合わせ</a> |
-        <a href="#" id="aboutLink">サイトについて</a>
-      </p>
+      <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
     </div>
   </footer>
 
