Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Best Gourmet</title>
+  <title>What's Your No.1?</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
   <!-- ヘッダー -->
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">My Best Gourmet</h1>
+      <h1 class="site-title">What's Your No.1?</h1>
       <nav class="navigation">
         <ul>
           <li><a href="home.html" id="homeLink">ホーム</a></li>
