Fix: Update homepage design and layout

--- a/login.html
+++ b/login.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
+  <!-- ▼ 追加: レスポンシブ対応の meta viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ログイン</title>
   <link rel="stylesheet" href="style.css" />
   <link
@@ -22,11 +24,6 @@
           <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
         </ul>
       </nav>
-      <!-- 言語切り替え（任意で多言語対応させる場合） -->
-      <!-- <select id="headerLanguageSelect">
-        <option value="ja">日本語</option>
-        <option value="en">English</option>
-      </select> -->
     </div>
   </header>
 
