--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
+  <!-- ▼ 追加: レスポンシブ対応の meta viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>新規登録</title>
   <link rel="stylesheet" href="style.css" />
   <link
