--- a/signup.html
+++ b/signup.html
@@ -2,8 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <!-- ▼ 追加: レスポンシブ対応の meta viewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>新規登録</title>
   <link rel="stylesheet" href="style.css" />
   <link
@@ -12,45 +11,50 @@
   />
 </head>
 <body>
-  <!-- ヘッダー (共通) -->
+  <!-- ヘッダー -->
   <header class="site-header">
     <div class="container">
       <h1 class="site-title">My Best Gourmet</h1>
       <nav class="navigation">
         <ul>
-          <li><a href="home.html">ホーム</a></li>
-          <li><a href="post.html">投稿</a></li>
-          <li><a href="ranking.html">ランキング</a></li>
-          <li><a href="mypage.html">マイページ</a></li>
+          <li><a href="home.html" id="homeLink">ホーム</a></li>
+          <li><a href="post.html" id="postLink">投稿</a></li>
+          <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
+          <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
         </ul>
       </nav>
+      <!-- 言語切替セレクター -->
+      <select id="headerLanguageSelect">
+        <option value="ja">日本語</option>
+        <option value="en">English</option>
+      </select>
     </div>
   </header>
 
   <!-- メイン -->
   <main class="site-main">
     <section class="post-section container">
-      <h2 class="page-title" style="text-align:center;">新規登録</h2>
+      <h2 class="page-title" id="signupTitle" style="text-align:center;">新規登録</h2>
 
       <form id="signupForm" class="review-form" style="max-width:400px; margin:0 auto;">
         <div class="form-group">
-          <label for="nicknameInput">ユーザー名</label>
+          <label for="nicknameInput" id="nicknameLabel">ユーザー名</label>
           <input type="text" id="nicknameInput" required placeholder="山田 太郎" />
         </div>
         <div class="form-group">
-          <label for="signupEmailInput">メールアドレス</label>
+          <label for="signupEmailInput" id="signupEmailLabel">メールアドレス</label>
           <input type="email" id="signupEmailInput" required placeholder="example@test.com" />
         </div>
         <div class="form-group">
-          <label for="signupPasswordInput">パスワード</label>
+          <label for="signupPasswordInput" id="signupPasswordLabel">パスワード</label>
           <input type="password" id="signupPasswordInput" required placeholder="********" />
         </div>
-        <button type="submit" class="btn-submit">新規登録</button>
+        <button type="submit" class="btn-submit" id="signupButton">新規登録</button>
       </form>
 
-      <p style="text-align:center; margin-top:20px;">
+      <p style="text-align:center; margin-top:20px;" id="loginLinkText">
         既にアカウントをお持ちの方は
-        <a href="login.html">ログインはこちら</a>
+        <a href="login.html" id="goToLoginLink">ログインはこちら</a>
       </p>
     </section>
   </main>
@@ -58,7 +62,7 @@
   <!-- フッター -->
   <footer class="site-footer">
     <div class="container">
-      <p><a href="#">お問い合わせ</a> | <a href="#">サイトについて</a></p>
+      <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
     </div>
   </footer>
 
