--- a/login.html
+++ b/login.html
@@ -11,7 +11,6 @@
   />
 </head>
 <body>
-  <!-- ヘッダー -->
   <header class="site-header">
     <div class="container">
       <h1 class="site-title">My Best Gourmet</h1>
@@ -23,7 +22,6 @@
           <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
         </ul>
       </nav>
-      <!-- 言語切替セレクター -->
       <select id="headerLanguageSelect">
         <option value="ja">日本語</option>
         <option value="en">English</option>
@@ -31,12 +29,9 @@
     </div>
   </header>
 
-  <!-- メイン -->
   <main class="site-main">
     <section class="post-section container">
-      <!-- タイトル: #loginTitle -->
       <h2 class="page-title" id="loginTitle" style="text-align:center;">ログイン</h2>
-
       <form id="loginForm" class="review-form" style="max-width:400px; margin:0 auto;">
         <div class="form-group">
           <label for="emailInput" id="emailLabel">メールアドレス</label>
@@ -46,25 +41,25 @@
           <label for="passwordInput" id="passwordLabel">パスワード</label>
           <input type="password" id="passwordInput" required placeholder="********" />
         </div>
-        <!-- ボタン: #loginButton -->
         <button type="submit" class="btn-submit" id="loginButton">ログイン</button>
       </form>
 
-      <p style="text-align:center; margin-top:20px;" id="signupLinkText">
-        アカウントをお持ちでない方は
-        <a href="signup.html" id="goToSignupLink">新規登録はこちら</a>
+      <!-- 親要素に textContent を書き込まない -->
+      <p style="text-align:center; margin-top:20px;">
+        <!-- テキスト部分 -->
+        <span id="signupLinkText">アカウントをお持ちでない方は</span>
+        <!-- リンク部分 -->
+        <a href="signup.html" id="goToSignupLink" style="margin-left:4px;">新規登録はこちら</a>
       </p>
     </section>
   </main>
 
-  <!-- フッター -->
   <footer class="site-footer">
     <div class="container">
       <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
     </div>
   </footer>
 
-  <!-- ログイン用のJS -->
   <script src="login.js"></script>
 </body>
 </html>
